--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
         <artifactId>postgresql</artifactId>
         <version>42.1.1</version>
     </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.33</version>
+    </dependency>
 
     </dependencies>
 
