--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
         <version>8.0.33</version>
     </dependency>
 
+    <dependency>
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time</artifactId>
+        <version>2.12.5</version>
+    </dependency>
+
     </dependencies>
 
 </project>
