--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.HSQLDialect
-        ddl-auto: create
+        ddl-auto: update
     show-sql: true
   database:
     driverClassName: org.hsqldb.jdbcDriver
