--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,15 +3,16 @@ spring:
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.HSQLDialect
-        ddl-auto: update
-    show-sql: true
+        dialect: org.hibernate.dialect.PostgreSQL94Dialect
+        hbm2ddl:
+          auto: create
+        show-sql: true
   database:
-    driverClassName: org.hsqldb.jdbcDriver
+    driverClassName: org.postgresql.Driver
   datasource:
-    url: jdbc:hsqldb:mem:spring
-    username: sa
-    password:
+    url: jdbc:postgresql://localhost:5432/pprog
+    username: postgres
+    password: Halamadrid25
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
